Manifests/ingresspathbaserouting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mavendeployment
  namespace: test 
spec:
  selector:
    matchLabels:
      app: maven   
  template:
    metadata:
      labels:
        app: maven
    spec:
      containers:
      - name: mavencontainer
        image: prcdocker/maven-web-application:multistagedockerfile
        resources:
          requests:
            cpu: "300m"
            memory: "450Mi"
          limits:
            memory: "550Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mavensvc
  namespace: test 
spec:
  type: NodePort
  selector:
    app: maven
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maven-ingress
  namespace: test
spec:
  ingressClassName: nginx
  rules:
  - host: akashdevops.co.in
    http:
      paths:
      - pathType: Prefix
        path: "/maven-web-application"
        backend:
          service:
            name: mavensvc
            port:
              number: 80
